# MicroBenchmarks

./: .clang-format  .gitignore  Makefile  README.md  configure.ac
src/: Makefile.am  benchmarks.c  format_output.c  main.c  student_t.c
src/include/: benchmarks.h  student_t.h
tests/: Makefile.am  unit_test.c
